--- a/main.css
+++ b/main.css
@@ -484,12 +484,12 @@ body {
 
 @media screen and (max-width: 480px) {
     html, body {
-        height: 100%;
+        height: 100dvh;
     }
     .container {
-        padding: 7% 3% 3% 3%;
+        padding: 9% 3% 14% 3%;
         grid-template-columns: none;
-        grid-template-rows: 2fr 7fr 3fr 5fr;
+        grid-template-rows: 2fr 6fr 3fr 5fr;
         grid-template-areas: 
             'a'
             'b'
@@ -565,7 +565,7 @@ body {
         .forecast-desc {font-size: 9px;}
 
         .daycard-box {
-            gap: 5px;
+            gap: 2.5px;
             
             .daycard {
                 padding: 8px;
@@ -574,8 +574,8 @@ body {
                     width: 70%;
                 }
     
-                .tanggal { font-size: 8px; }
-                .daytemp { font-size: 8px; }
+                .tanggal { font-size: 9px; }
+                .daytemp { font-size: 9px; }
             }
         }
     }
