--- a/preloader.css
+++ b/preloader.css
@@ -1,15 +1,24 @@
 @import "compass/css3";
 
 
-.background-loader svg {
+.background-loader {
     position: absolute;
-    margin-left: -55px;
-    margin-top: -100px;
-    height: 110px;
-    width: 110px;
-    left: 50%;
-    top: 50%;
-    z-index: 99;
+    width: 100%;
+    top: 0;
+    bottom: 0;
+    background-color: rgba(255, 255, 255, 0.188);
+    backdrop-filter: blur(7px);
+
+    & svg {
+        position: absolute;
+        margin-left: -55px;
+        margin-top: -100px;
+        height: 110px;
+        width: 110px;
+        left: 50%;
+        top: 50%;
+        z-index: 99;
+    }
 }
 
 .preloader-container {
