--- a/preloader.css
+++ b/preloader.css
@@ -9,6 +9,7 @@
     bottom: 0;
     background-color: rgba(255, 255, 255, 0.188);
     backdrop-filter: blur(7px);
+    transition: all 1s ease-in-out;
 
     & svg {
         position: absolute;
