--- a/preloader.css
+++ b/preloader.css
@@ -8,7 +8,7 @@
     top: 0;
     bottom: 0;
     background-color: rgba(0, 0, 0, 0.202);
-    backdrop-filter: blur(7px);
+    backdrop-filter: blur(7px) brightness(60%);
     transition: all 1s ease-in-out;
 
     & svg {
