--- a/preloader.css
+++ b/preloader.css
@@ -9,7 +9,7 @@
     bottom: 0;
     background-color: rgba(0, 0, 0, 0.502);
     backdrop-filter: blur(7px) brightness(80%);
-    transition: all 1s ease-in-out;
+    transition: all 1s ease-out;
 
     & svg {
         position: absolute;
