--- a/main.css
+++ b/main.css
@@ -56,7 +56,7 @@ body {
     font-family: "Montserrat";
     width: 100%;
     height: 100vh;
-    background-image: url(/night-themes/random/6.webp);
+    background-image: url(/day-themes/random/5.webp);
     background-size: cover;
     background-color: black;
     background-repeat: no-repeat;
