--- a/main.css
+++ b/main.css
@@ -522,8 +522,8 @@ body {
 
     .redirect {
 	position: absolute;
-	top: 1.5%
-	left: 2.5%
+	top: 1.5%;
+	left: 2.5%;
 	    
 	.github svg {
             width: 28px;
