--- a/main.css
+++ b/main.css
@@ -526,6 +526,7 @@ body {
 	left: 2.5%; */
 	display: flex;
         align-items: center;
+	margin-top: 3px;
 	    
 	.github svg {
             width: 30px;
