--- a/preloader.css
+++ b/preloader.css
@@ -10,6 +10,20 @@
     background-color: rgba(0, 0, 0, 0.502);
     backdrop-filter: blur(7px) brightness(80%);
     transition: all 1s ease-out;
+    text-align: center;
+
+    & p {
+        color: white;
+        font-family: Helvetica, sans-serif;
+        letter-spacing: 1px;
+        font-size: 2vw;
+        opacity: 0;
+        position: absolute;
+        margin-left: -6vw;
+        top: 55%;
+        left: 50%;
+        z-index: 99;
+    }
 
     & svg {
         position: absolute;
