--- a/preloader.css
+++ b/preloader.css
@@ -16,10 +16,10 @@
         color: white;
         font-family: Helvetica, sans-serif;
         letter-spacing: 1px;
-        font-size: 4vh;
+        font-size: 24px;
         opacity: 0;
         position: absolute;
-        margin-left: -12vh;
+        margin-left: -75px;
         top: 55%;
         left: 50%;
         z-index: 99;
