--- a/main.css
+++ b/main.css
@@ -114,6 +114,7 @@ body {
             transition: all 200ms ease-in-out;
             width: 36px;
             height: 36px;
+	z-index: 99999;
 
             &:hover {
                 /* transform: scaleX(-1); */
