--- a/main.css
+++ b/main.css
@@ -527,17 +527,18 @@ body {
 
     }
 
-/*     .redirect {
+    .redirect {
         display: flex;
         align-items: center;
         margin-bottom: -5px;
         margin-left: 16px;
             
-        .github svg {
+        .github img {
                 width: 32px;
                 height: 32px;
         }
-    } */
+    }
+	
     .search {
         grid-area: a;
         grid-template-columns: 60%;
