--- a/main.css
+++ b/main.css
@@ -117,10 +117,10 @@ body {
 		z-index: -1;
 	    
 
-            &:hover {
-                /* transform: scaleX(-1); */
-                filter: brightness(70%);
-
+            @media screen and (min-width: 481px) {
+                &:hover {
+                    filter: brightness(70%);
+                }
             }
         }
     }
