--- a/main.css
+++ b/main.css
@@ -106,7 +106,8 @@ body {
 
 .redirect {
     grid-area: a;
-    
+    pointer-events: none;
+
     .github {
         display: inline-block;
         
@@ -115,6 +116,8 @@ body {
             width: 36px;
             height: 36px;
 		z-index: -1;
+	        pointer-events: none;
+
 	    
 
             @media screen and (min-width: 481px) {
