--- a/main.css
+++ b/main.css
@@ -77,6 +77,7 @@ body {
         background-color: rgba(248, 248, 248, 0);
         filter: grayscale(0.4) brightness(80%);
         /* transition: 2s; */
+	    pointer-events: none;
     }
 
     #background-image {
@@ -86,6 +87,7 @@ body {
         object-fit: cover;
         z-index: -1;
         height: auto;
+	    pointer-events: none;
     }
 }
 
