--- a/main.css
+++ b/main.css
@@ -111,7 +111,7 @@ body {
     position: fixed;
 	top: 10px;
 		left: 10px;
-	z-index: 999999;
+/* 	z-index: 999999; */
 	/*     pointer-events: none; */
 
     .github {
