--- a/main.css
+++ b/main.css
@@ -104,11 +104,12 @@ body {
     gap: 10px;
     background-color: rgba(245, 235, 235, 0.16);
     height: 100vh;
+	position: relative;
 }
 
 .redirect {
-	grid-area: a;
-    position: fixed;
+    grid-area: a;
+    position: absolute;
 	top: 10px;
 		left: 10px;
 /* 	z-index: 999999; */
