--- a/main.css
+++ b/main.css
@@ -105,6 +105,7 @@ body {
     background-color: rgba(245, 235, 235, 0.16);
     height: 100vh;
 	position: relative;
+	pointer-events: none;
 }
 
 .redirect {
