--- a/main.css
+++ b/main.css
@@ -104,6 +104,8 @@ body {
     gap: 10px;
     background-color: rgba(245, 235, 235, 0.16);
     height: 100vh;
+    position: relative;
+	
 }
 
 .redirect {
