--- a/preloader.css
+++ b/preloader.css
@@ -11,6 +11,7 @@
     backdrop-filter: blur(7px) brightness(80%);
     transition: all 1s ease-out;
     text-align: center;
+    z-index: 99999
 
     & p {
         color: white;
