--- a/preloader.css
+++ b/preloader.css
@@ -15,9 +15,9 @@
 
     & p {
         color: white;
-        font-family: Helvetica, sans-serif;
+        font-family: "montserrat", Helvetica, sans-serif;
         letter-spacing: 1px;
-        font-size: 24px;
+        font-size: 18px;
         opacity: 0;
         position: absolute;
         margin-left: -75px;
