--- a/main.css
+++ b/main.css
@@ -108,6 +108,7 @@ body {
 .redirect {
     grid-area: a;
     z-index: 1;
+    width: fit-content;
 
     .github {
         display: flex;
@@ -119,15 +120,16 @@ body {
             width: 36px;
             height: 36px;
 
-            &:hover {
-                filter: brightness(70%);
-            }
         }
 	    
 	& p {
 	    color: white;
 	    font-size: 12px;
 	}
+        
+	&:hover {
+            filter: brightness(70%);
+        }
     }
 }
 
