--- a/preloader.css
+++ b/preloader.css
@@ -15,7 +15,7 @@
 
     & p {
         color: white;
-        font-family: Helvetica, sans-serif;
+        font-family: Arial, Helvetica, sans-serif;
         letter-spacing: 1px;
         font-size: 18px;
         opacity: 0;
